--- a/src/_includes/masthead.html
+++ b/src/_includes/masthead.html
@@ -29,7 +29,7 @@
               {%- endif -%}
               {% assign rootUrl = link.url | slice: 0, -1 | split: '/' %}
               {% assign crumbs = page.url | slice: 0, -1 | split: '/' %}
-              <li class="masthead__menu-item {% if rootUrl[1] == crumbs[1] %} active {% endif %}">
+              <li class="masthead__menu-item {% if rootUrl[1] == crumbs[1] or chapter == rootUrl[1] %}active{% endif %}">
                 <a href="{{ url }}" {% if link.description %}title="{{ link.description }}"{% endif %}>{{ link.title }}</a>
               </li>
             {%- elsif link.separator -%}
