--- a/src/_sass/sdk-documentation-layout.scss
+++ b/src/_sass/sdk-documentation-layout.scss
@@ -92,18 +92,21 @@ section.page__content h5 {
 }
 
 #search-result-none {
-  margin-top: 0;
+  display: flex;
+  align-items: center;
   margin: 0;
   padding: 1em;
   font-size: 2em;
   font-weight: 700;
   font-family: var(--ui);
+  border-radius: 8px;
   border: 1px solid var(--callout-border-color);
-  border-radius: 16px;
   background: var(--callout-background);
 
   .icon {
+    top: auto;
     font-size: 2em;
+    margin-right: 20px;
   }
 }
 
@@ -731,6 +734,11 @@ figure.highlight {
 
 
 @media (prefers-color-scheme: dark) {
+  .search-box-container:focus-within,
+  .search-box-container:hover {
+      background: var(--ui-background-hover);
+  }
+
   .card h3 strong, var {
     color: var(--base-05);
   }  
