feat: universal navigation

--- a/src/_sass/imports/button.scss
+++ b/src/_sass/imports/button.scss
@@ -14,7 +14,7 @@
   display: inline-block;
   margin-bottom: 0.25em;
   padding: 0.5em 1em;
-  font-family: var(--ui-font);
+  font-family: var(--ui-font-family);
   font-size: $type-size-5;
   font-weight: bold;
   text-align: center;
