--- a/src/_sass/imports/minimal-mistakes/_forms.scss
+++ b/src/_sass/imports/minimal-mistakes/_forms.scss
@@ -51,7 +51,7 @@ button,
 select,
 textarea {
   box-sizing: border-box;
-  font-family: var(--ui-font);
+  font-family: var(--ui-font-family);
 }
 
 label {
