--- a/src/_sass/imports/minimal-mistakes/_sidebar.scss
+++ b/src/_sass/imports/minimal-mistakes/_sidebar.scss
@@ -52,7 +52,7 @@
     h5,
     h6 {
         margin-bottom: 0;
-        font-family: var(--display-font);
+        font-family: var(--display-font-family);
     }
 
     p,
