--- a/src/_sass/imports/minimal-mistakes/_variables.scss
+++ b/src/_sass/imports/minimal-mistakes/_variables.scss
@@ -13,7 +13,7 @@ $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
 
 /* system typefaces */
-$caption-font-family: var(--body-font) !default;
+$caption-font-family: var(--body-font-family) !default;
 
 /* type scale */
 $type-size-1: 2.441rem !default; // ~39.056px
