--- a/src/_includes/nav_list.liquid
+++ b/src/_includes/nav_list.liquid
@@ -2,11 +2,11 @@
 <nav class="nav__list">
   {% if sidebar.title %}<h3 class="nav__title" style="padding-left: 0;">{{ sidebar.title }}</h3>{% endif %}
   <input id=ac-toc name=accordion-toc type=checkbox />
-  <label for=ac-toc>Table of Content<svg aria-hidden=true focusable=false class="svg-inline--fa" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill=currentColor d="M432.6 209.3l-191.1 183.1C235.1 397.8 229.1 400 224 400s-11.97-2.219-16.59-6.688L15.41 209.3C5.814 200.2 5.502 184.1 14.69 175.4c9.125-9.625 24.38-9.938 33.91-.7187L224 342.8l175.4-168c9.5-9.219 24.78-8.906 33.91 .7187C442.5 184.1 442.2 200.2 432.6 209.3z"/></svg></label>
+  <label for=ac-toc>Table of Content<svg aria-hidden=true focusable=false role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill=currentColor d="M432.6 209.3l-191.1 183.1C235.1 397.8 229.1 400 224 400s-11.97-2.219-16.59-6.688L15.41 209.3C5.814 200.2 5.502 184.1 14.69 175.4c9.125-9.625 24.38-9.938 33.91-.7187L224 342.8l175.4-168c9.5-9.219 24.78-8.906 33.91 .7187C442.5 184.1 442.2 200.2 432.6 209.3z"/></svg></label>
 
   <ul class="nav__items">
     {% for nav in navigation[nav] %}
-      <li>
+      <li class="nav__section">
         {% if nav.url %}
           {% comment %} internal/external URL check {% endcomment %}
           {% if nav.url contains "://" %}
@@ -15,10 +15,21 @@
             {% assign nav_url = nav.url | url %}
           {% endif %}
 
-          <span class="nav__sub-title"><a href="{{ nav_url }}">{{ nav.title }}</a></span>
+          <span class="nav__sub-title"><a href="{{ nav_url }}">{{ nav.title }}</a>
+            {% if nav.children != null %}
+            <button class="nav__sub-title_toggle nav__sub-title_expand">{% icon "plus" %}</button>
+            <button class="nav__sub-title_toggle nav__sub-title_collapse">{% icon "minus" %}</button>
+            {% endif %}
+          </span>
         {% else %}
-          <span class="nav__sub-title">{{ nav.title }}</span>
+          <button class="nav__sub-title nav__sub-title_toggle">{{ nav.title }}
+            {% if nav.children != null %}
+            <span class="nav__sub-title_expand">{% icon "plus" %}</span>
+            <span class="nav__sub-title_collapse">{% icon "minus" %}</span>
+            {% endif %}
+          </button> 
         {% endif %}
+
 
         {% if nav.children != null %}
         <ul>
@@ -49,7 +60,6 @@
                 </a></li>
             {% elsif child.separator %}
               <li class="separator"></li>
-              </ul></li><li><ul>
             {% elsif child.title %}
               <li class="sub-title">{{ child.title }}</li>
             {% endif %}
@@ -60,3 +70,30 @@
     {% endfor %}
   </ul>
 </nav>
+
+<script defer>
+  function findSection(el) {
+    while (el && !el.classList.contains('nav__section')) el = el.parentElement;
+    return el;
+  }
+  window.addEventListener('DOMContentLoaded', (event) => {
+    const sidebar = document.querySelector('.sidebar');
+
+    const activeItem = sidebar.querySelector('.nav__items a.active');
+
+    findSection(activeItem).classList.add('active');
+
+    sidebar.scrollTo(0, activeItem.offsetTop - sidebar.clientHeight + 100)
+
+
+    for (const el of [...sidebar.getElementsByClassName('nav__sub-title_toggle')??[]]) 
+      el.addEventListener('click', (ev) => {
+        const section = findSection(ev.target);
+        if (section.classList.contains('active')) 
+          section.classList.remove('active')        
+        else    
+          section.classList.add('active')
+      }
+    )
+  });
+</script>
