--- a/src/_sass/imports/minimal-mistakes-overrides.scss
+++ b/src/_sass/imports/minimal-mistakes-overrides.scss
@@ -7,7 +7,7 @@
   line-height: 1;
   margin-left: 0;
   margin-right: 0;
-  font-family: var(--display-font);
+  font-family: var(--display-font-family);
   font-weight: 900;
   color: var(--blue-800);
   @media (prefers-color-scheme: dark) {
