--- a/src/_sass/imports/minimal-mistakes/_archive.scss
+++ b/src/_sass/imports/minimal-mistakes/_archive.scss
@@ -45,7 +45,7 @@
 
 .archive__item-title {
   margin-bottom: 0.25em;
-  font-family: var(--display-font);
+  font-family: var(--display-font-family);
   line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
