--- a/src/_sass/imports/minimal-mistakes/_base.scss
+++ b/src/_sass/imports/minimal-mistakes/_base.scss
@@ -12,7 +12,7 @@ body {
   margin: 0;
   padding: 0;
   color: var(--text-color);
-  font-family: var(--body-font);
+  font-family: var(--body-font-family);
   line-height: 1.5;
 
   &.overflow--hidden {
@@ -29,7 +29,7 @@ h5,
 h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
-  font-family: var(--display-font);
+  font-family: var(--display-font-family);
   font-weight: bold;
 }
 
@@ -161,7 +161,7 @@ code,
 kbd,
 samp,
 pre {
-  font-family: var(--monospace-font);
+  font-family: var(--monospace-font-family);
 }
 
 kbd {
