--- a/src/_sass/imports/minimal-mistakes/_buttons.scss
+++ b/src/_sass/imports/minimal-mistakes/_buttons.scss
@@ -11,7 +11,7 @@
   display: inline-block;
   margin-bottom: 0.25em;
   padding: 0.5em 1em;
-  font-family: var(--ui-font);
+  font-family: var(--ui-font-family);
   font-size: $type-size-6;
   font-weight: bold;
   text-align: center;
