--- a/src/_sass/imports/minimal-mistakes/_notices.scss
+++ b/src/_sass/imports/minimal-mistakes/_notices.scss
@@ -14,7 +14,7 @@
   margin: 2em 0 !important;  /* override*/
   padding: 1em;
   color: var(--text-color);
-  font-family: var(--body-font);
+  font-family: var(--body-font-family);
   font-size: $type-size-5 !important;
   text-indent: initial; /* override*/
   background-color: mix(#fff, $notice-color, 90%);
