--- a/src/_sass/imports/minimal-mistakes/_syntax.scss
+++ b/src/_sass/imports/minimal-mistakes/_syntax.scss
@@ -8,7 +8,7 @@ figure.highlight {
   margin-bottom: 1em;
   background: var(--base-00, $base00);
   color: var(--base-05, $base05);
-  font-family: var(--monospace-font);
+  font-family: var(--monospace-font-family);
   font-size: $type-size-5;
   line-height: 1.8;
   border-radius: $border-radius;
