--- a/src/_sass/imports/minimal-mistakes/_tables.scss
+++ b/src/_sass/imports/minimal-mistakes/_tables.scss
@@ -15,7 +15,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
   line-height: 1.47059;
-  font-family: var(--body-font);
+  font-family: var(--body-font-family);
   font-size: $type-size-5;
 
   & + table {
