--- a/src/_sass/imports/minimal-mistakes/_utilities.scss
+++ b/src/_sass/imports/minimal-mistakes/_utilities.scss
@@ -69,7 +69,7 @@ body:hover .visually-hidden button {
   position: fixed;
   z-index: 20;
   margin: 0;
-  font-family: var(--ui-font);
+  font-family: var(--ui-font-family);
   white-space: nowrap;
 }
 
@@ -389,6 +389,7 @@ body:hover .visually-hidden button {
     > * {
       display: block;
     }
+    > script { display: none}
   }
 }
 
