fix: dark mode nav list subheading color

--- a/src/_includes/nav_list.liquid
+++ b/src/_includes/nav_list.liquid
@@ -71,7 +71,7 @@
   </ul>
 </nav>
 
-<script defer>
+<script>
   function findSection(el) {
     while (el && !el.classList.contains('nav__section')) el = el.parentElement;
     return el;
